# PurifyPixels

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
PurifyPixels/: app.py
PurifyPixels/detect/: dataset.py  infer.py  model.py
PurifyPixels/eliminate/: dataset.py  infer.py  model.py
PurifyPixels/notebooks/: eliminate.ipynb
